--- a/react/public/index.dev.html
+++ b/react/public/index.dev.html
@@ -9,17 +9,10 @@
     <link rel="apple-touch-icon-precomposed" href="icon.png"/>
     <link rel="apple-touch-startup-image" sizes="2048x1496" href="">
     <link rel="apple-touch-icon" href="icon.png"/>
-    <title>iReader</title>
+    <title>ireader</title>
 </head>
 <body>
     <div id="root"></div>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-91762675-8', 'auto');
-      ga('send', 'pageview');
-    </script>
+    <script type="text/javascript" src="/dll.js"></script></body>
 </body>
 </html>
